# docify

./: .gitignore  Cargo.toml  publish.sh
examples/: integration.rs  samples.rs
examples/markdown_source/: index.md
examples/markdown_source/subfolder/: chapter_1.md  chapter_2.md  chapter_3.md
macros/: Cargo.toml
macros/fixtures/: complicated.rs  file.rs  file_1.md
macros/src/: lib.rs  tests.rs
macros/src/utils/: mod.rs
src/: lib.rs
