[workspace]
members = ["macros"]

[package]
name = "docify_clone"
version = "0.0.1"
edition = "2021"
authors = ["qxprakash"]
license = "MIT"
keywords = ["docify_fork", "compile-time", "macro", "docs", "embed"]
categories = ["development-tools", "development-tools::procedural-macro-helpers", "rust-patterns"]
description = "Docify allows you to live-embed at compile time pieces of code from throughout your project as rust doc examples."

[dependencies]
docify_macros = { path = "macros", version = "0.0.1" }

[dev-dependencies]
proc-utils = "0.1.0"

[features]
default = []
generate-readme = []
