[workspace]
members = ["macros"]

[package]
name = "docif"
version = "0.0.2"
edition = "2021"
authors = ["qxprakash"]
license = "MIT"
keywords = ["docif", "compile-time", "macro", "docs", "embed"]
categories = ["development-tools", "development-tools::procedural-macro-helpers", "rust-patterns"]
description = "docif allows you to live-embed at compile time pieces of code from throughout your project as rust doc examples."

[dependencies]
docif_macros = { path = "macros", version = "0.0.1" }

[dev-dependencies]
proc-utils = "0.1.0"

[features]
default = []
generate-readme = []