[package]
name = "docif_macros"
version = "0.0.1"
edition = "2021"
authors = ["qxprakash"]
license = "MIT"
description = "Support macros for docif."

[lib]
proc-macro = true

[dependencies]
derive-syn-parse = "0.2"
proc-macro2 = "1"
quote = "1"
regex = "1"
syn = { version = "2", features = ["full", "visit"] }
walkdir = "2"
common-path = "1"
termcolor = "1"
once_cell = "1"
toml = "0.8"
git2 = "0.13"
tempdir = "0.3"
reqwest = { version = "0.11", features = ["blocking"] }